--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    //okHttp3
-    def okhttp_version = "4.10.0"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    //gson
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation 'com.google.code.gson:gson:2.9.0'
-    // location
     implementation 'com.google.android.gms:play-services-location:19.0.1'
 }
